[update] made cast path shorter /google-home-notifier -> /cast
